--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "machine",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
+  "homepage": "http://loteknowledG.github.io/no1-home",
   "dependencies": {
+    "@capacitor/android": "^1.5.1",
     "@capacitor/core": "1.5.1",
+    "@capacitor/ios": "^1.5.1",
     "@ionic/react": "^5.0.0",
     "@ionic/react-router": "^5.0.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -27,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,7 +50,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "1.5.1"
+    "@capacitor/cli": "1.5.1",
+    "gh-pages": "^2.2.0"
   },
   "description": "An Ionic project"
 }
